--- a/EntregaProyectos/Aleatorios/app/src/main/res/values/strings.xml
+++ b/EntregaProyectos/Aleatorios/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Aleatorios</string>
+    <string name="IB"> Descripcion </string>
+    <string name="BtnCambiarDados"> DadosLocos </string>
 </resources>
