--- a/PokeWorld/app/src/main/res/values/strings.xml
+++ b/PokeWorld/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Pokeworld</string>
     <string name="tres_en_raya"> Tic Tac Toe</string>
+    <string name="squirtle"> </string>
+    <string name="meow"></string>
 </resources>
